[gd_scene load_steps=14 format=3 uid="uid://h5e42ertap6e"]

[ext_resource type="Script" uid="uid://c1ex2hn2hsd11" path="res://scenes/update_puzzle_visibility.gd" id="1_bkykn"]
[ext_resource type="Shader" uid="uid://c231ni2hrec8i" path="res://blur.gdshader" id="2_o527s"]
[ext_resource type="AudioStream" uid="uid://5oxvfbmo02ay" path="res://assets/audio/audio_free_sfx/stone_moves/lightclunk2.wav" id="3_ng16e"]
[ext_resource type="AudioStream" uid="uid://1qnt7461qc5c" path="res://assets/audio/audio_free_sfx/stone_moves/lightclunk1.wav" id="4_eh7xg"]
[ext_resource type="AudioStream" uid="uid://daeeudxo472dw" path="res://assets/audio/audio_free_sfx/stone_moves/stone_door.ogg" id="5_p0m6s"]
[ext_resource type="Script" uid="uid://2yuf82c4dmc2" path="res://scenes/puzzle_logic_2.gd" id="6_bkykn"]
[ext_resource type="Script" uid="uid://dqjigs5pywwn1" path="res://scenes/puzzle_grid.gd" id="7_50u72"]
[ext_resource type="Texture2D" uid="uid://pp1tv6obnds4" path="res://assets/art_drawn_tile/new_right_click.png" id="8_5enmo"]
[ext_resource type="Texture2D" uid="uid://no2qq6ji3lpb" path="res://assets/art_drawn_tile/new_left_click.png" id="9_ly8vh"]
[ext_resource type="Texture2D" uid="uid://c3sdurchpcyjh" path="res://assets/art_drawn_tile/mural_1/mural.png" id="10_3n727"]
[ext_resource type="Material" uid="uid://dqha7o51hlsjd" path="res://assets/scripts_backups/shine.tres" id="10_ng16e"]
[ext_resource type="Texture2D" uid="uid://cpcyk8tmi0cdj" path="res://scenes/black.png" id="11_eh7xg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sw7ij"]
shader = ExtResource("2_o527s")
shader_parameter/blur = 0.5
shader_parameter/brightness = 0.6

[node name="PuzzleCanvas" type="CanvasLayer"]
visible = false
script = ExtResource("1_bkykn")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_sw7ij")
custom_minimum_size = Vector2(1920, 1080)

[node name="Audio_PieceLift" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ng16e")
pitch_scale = 0.75
bus = &"SFX"

[node name="Audio_PieceDrop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_eh7xg")
pitch_scale = 0.75
bus = &"SFX"

[node name="Audio_PieceSlide" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_p0m6s")
pitch_scale = 2.0
bus = &"SFX"

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(1280, 720)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PanelContainer2" type="PanelContainer" parent="."]
visible = false
z_index = 100
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 370.0
offset_top = 290.0
offset_right = -368.0
offset_bottom = -308.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer2"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
text = "[center]You beat the puzzle! That's our demo, thanks for testing! Feel free to quit, or explore the scenery more.[center]"

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(960, 540)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -270.0
offset_right = 480.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(480, 270)
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer"]
layout_mode = 2
text = "(Press R to Reset Puzzle)"

[node name="Container" type="Container" parent="PanelContainer"]
layout_mode = 2
script = ExtResource("6_bkykn")

[node name="Left_Grid" type="Sprite2D" parent="PanelContainer/Container"]
position = Vector2(53, 160)
scale = Vector2(0.8, 0.8)
script = ExtResource("7_50u72")

[node name="ColorRect" type="ColorRect" parent="PanelContainer/Container/Left_Grid"]
offset_top = 5.0
offset_right = 294.0
offset_bottom = 425.0
mouse_filter = 2
mouse_force_pass_scroll_events = false
color = Color(0.122252, 0.122252, 0.122252, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="PanelContainer/Container/Left_Grid/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -85.0
offset_top = -90.0
offset_right = 85.0
offset_bottom = 80.0
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(85, 0)
mouse_filter = 2
mouse_force_pass_scroll_events = false
color = Color(0.122252, 0.122252, 0.122252, 1)
metadata/_edit_use_anchors_ = true

[node name="slide" type="TextureRect" parent="PanelContainer/Container/Left_Grid/ColorRect/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("8_5enmo")
metadata/_edit_use_anchors_ = true

[node name="ColorRect2" type="ColorRect" parent="PanelContainer/Container/Left_Grid/ColorRect"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -215.0
offset_right = 152.0
offset_bottom = 215.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.670588, 0.431373, 0.00784314, 0.552941)

[node name="Right_Grid" type="Sprite2D" parent="PanelContainer/Container"]
position = Vector2(353, 74)
scale = Vector2(0.8, 0.8)
script = ExtResource("7_50u72")

[node name="ColorRect" type="ColorRect" parent="PanelContainer/Container/Right_Grid"]
offset_top = 5.0
offset_right = 690.0
offset_bottom = 555.0
mouse_filter = 2
mouse_force_pass_scroll_events = false
color = Color(0.122252, 0.122252, 0.122252, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="PanelContainer/Container/Right_Grid/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -85.0
offset_top = -90.0
offset_right = 85.0
offset_bottom = 80.0
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(85, 0)
mouse_filter = 2
mouse_force_pass_scroll_events = false
color = Color(0.122252, 0.122252, 0.122252, 1)
metadata/_edit_use_anchors_ = true

[node name="slide" type="TextureRect" parent="PanelContainer/Container/Right_Grid/ColorRect/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("9_ly8vh")

[node name="ColorRect2" type="ColorRect" parent="PanelContainer/Container/Right_Grid/ColorRect"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -280.0
offset_right = 350.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.670588, 0.431373, 0.00784314, 0.552941)

[node name="BlankShineOverlay" type="TextureRect" parent="PanelContainer/Container/Right_Grid/ColorRect"]
visible = false
modulate = Color(1, 1, 1, 0.266667)
show_behind_parent = true
z_index = 6
material = ExtResource("10_ng16e")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -352.083
offset_top = -280.0
offset_right = 347.917
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("11_eh7xg")
expand_mode = 1

[node name="Reference" type="Sprite2D" parent="PanelContainer/Container"]
visible = false
position = Vector2(668, 251)
scale = Vector2(0.8, 0.8)
texture = ExtResource("10_3n727")

[node name="Puzzle_Pieces" type="Sprite2D" parent="PanelContainer/Container"]
position = Vector2(353, 74)
scale = Vector2(0.8, 0.8)
